# tracking

./: .gitignore  main1.py  pyproject.toml
examples/1/: 1.json  2.json
src/: config.py  extract_frame.py  main.py  pose_tracking.py  test.py  test_poses.py
src/tracking/: tracker.py
